--- a/css/style.css
+++ b/css/style.css
@@ -427,7 +427,7 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 }
 
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:focus, .navbar-default .navbar-nav > .open > a:hover {
-  background-color: blue;
+  background-color: transparent;
 }
 
 /* header area 2 */
