changed navbar opacity/color

--- a/css/style.css
+++ b/css/style.css
@@ -254,7 +254,7 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 /* End Top header 2 */
 /* Header Aera */
 .header_aera {
-  background:rgba(255,255,255,0.5);
+  background:rgba(97, 97, 97, 0.59);
   border-radius: 0;
   border: 0;
   margin: 0;
