what we offer background

--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 /* End about_us_area */
 /*--------------------------------------------------*/
 .what_we_area {
-  background: #f8b81d;
+  background: #1ef1db;
 }
 .what_we_area .tittle h2:after {
   background: #fff;
