--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,9 @@ This files contents are outlined below.
 /* Section Title*/
 .tittle {
   text-align: center;
-  text-transform: uppercase;
+}
+#aboutUsP {
+  font-size: 20px;
 }
 .tittle h2 {
   font: 400 24px "Oswald", sans-serif;
@@ -255,7 +257,7 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 /* End Top header 2 */
 /* Header Aera */
 .header_aera {
-  background:rgba(48, 47, 47, 0.61);
+  background:rgba(214, 214, 214, 0.61);
   border-radius: 0;
   border: 0;
   margin: 0;
