--- a/css/style.css
+++ b/css/style.css
@@ -401,7 +401,11 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
     transform: scaleX(1);
   }
 }
+#acllogocenter{
+  height: 100px;
+  width: 200px;
 
+}
 /* End Header Aera */
 /* End header area 2 */
 .header_aera_tow {
