--- a/css/style.css
+++ b/css/style.css
@@ -640,7 +640,10 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 /* about_us_area */
 .about_us_area {
   background: #fefefe;
+
+
 }
+
 .about_us_area .about_row {
   padding-top: 70px;
   padding-bottom: 70px;
@@ -691,17 +694,28 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 /*--------------------------------------------------*/
 .what_we_area {
   /* background: #1ef1db; */
-  background: url("../images/ncwit.jpg_large") no-repeat fixed;
+  background: url("../images/aclentrance.jpg") no-repeat fixed;
   background-position: center;
   position: relative;
   z-index: 1;
   padding-bottom: 100px;
 }
+.what_we_area:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.73);
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+  z-index: -1;
+}
 .what_we_area .tittle h2:after {
   background: #fff;
 }
 .what_we_area .tittle h4 {
-  color: #333;
+  color: #fff;
 }
 .what_we_area .construction_iner {
   padding-top: 60px;
@@ -754,7 +768,9 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 .what_we_area .construction_iner .construction:hover i, .what_we_area .construction_iner .construction:focus i {
   font-size: 35px;
 }
-
+#whitetext{
+  color:rgba(255, 255, 255, 0.75);
+}
 /*--------------------------------------------------*/
 .our_feature_area {
   padding-bottom: 90px;
