--- a/css/style.css
+++ b/css/style.css
@@ -543,11 +543,14 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 #ACLhomelogo{
   height: 150px;
   width: 150px;
-  margin: 0 auto;
+  margin-top: 40px;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-bottom: 0px;
 }
 #mottotext{
   font-style: italic;
-  margin-top: 50px;
+  margin-top: 25px;
   margin-bottom: 25px;
 }
 /* End slider_area */
