changed background picture for our achievements

--- a/css/style.css
+++ b/css/style.css
@@ -1086,7 +1086,7 @@ a:focus, a:hover, .btn:focus, .btn:hover, button:focus, button:hover {
 
 /*--------------------------------------------------*/
 .our_achievments_area {
-  background: url("../images/achievments_bg.jpg") no-repeat fixed;
+  background: url("../images/ncwit.jpg_large") no-repeat fixed;
   background-position: center;
   text-align: center;
   position: relative;
